Fix: open by setting

--- a/public/popup.html
+++ b/public/popup.html
@@ -14,16 +14,17 @@
 
     <div class="form">
       <label for="keyword" width="50px">關鍵字 keyword</label>
-      <input type="text" id="keyword" width="50px">
+      <input type="text" id="keyword" width="50px" value="keyword">
     </div>
     所有資源：
 
     <div id="search-area">
     </div>
 
-    <button id="searchBtn" class="button">open all</button>
-    <button id="removeBtn" class="button">remove</button>
-
+    <div class="button-container">
+      <button id="searchBtn" class="button">Open Websites</button>
+      <button id="resetBtn" class="button">Reset Websites</button>
+    </div>
 
 
   </div>
