--- a/public/popup.html
+++ b/public/popup.html
@@ -16,7 +16,7 @@
       <label for="keyword" width="50px">關鍵字 keyword</label>
       <input type="text" id="keyword" width="50px" value="keyword">
     </div>
-    所有資源：
+    所有資源： <code>EX: http://xxx/ <b>{{keyword}}</b> </code>
 
     <div id="search-area">
     </div>
